--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="search">
-    <h1 class="cap">capsule Students</h1>
+    <h1 class="cap">My Capsule</h1>
     <input type="text" id="input" class="search-item" placeholder=" Search..." />
     <select name="category" id="category" class="search-item">
       <option value="everything">Everything</option>
